[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/prefabs/bike/scifi_bike.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/SceneTransitionSlide/SceneTransitionSlide.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/MainMenu/BikeRotator.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/playbutton.png" type="Texture" id=4]
[ext_resource path="res://src/MainMenu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/SF Distant Galaxy.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="CubeMesh" id=1]

[node name="MainMenu" type="Node"]
script = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -148.0
margin_right = 50.0
margin_bottom = -50.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "Highscore: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTransition" parent="UI" instance=ExtResource( 2 )]

[node name="Bike" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="scifi_bike" parent="Bike" instance=ExtResource( 1 )]

[node name="StartNextSceneTimer" type="Timer" parent="Bike"]
wait_time = 0.4
one_shot = true

[node name="DriveAwayTimer" type="Timer" parent="Bike"]
wait_time = 0.5
one_shot = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.55789, 0.829915, 0, -0.829915, 0.55789, 0.0743062, 5.81946, 5.19815 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.28373, 0 )
light_energy = 0.3
shadow_color = Color( 0.913725, 0.913725, 0.913725, 1 )
spot_range = 10.0

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 46.2019, 0, 0, 0, 1, 0, 0, 0, 106.414, 0, -2.59286, 0 )
mesh = SubResource( 1 )
material/0 = null
[connection signal="pressed" from="UI/TextureButton" to="Bike" method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Bike/StartNextSceneTimer" to="." method="_on_StartNextSceneTimer_timeout"]
[connection signal="timeout" from="Bike/DriveAwayTimer" to="Bike" method="_on_DriveAwayTimer_timeout"]
